--- a/pages/9538.html
+++ b/pages/9538.html
@@ -447,9 +447,37 @@ margin-left: 0em;
 
 <h2 id='concepts'>Concepts</h2>
 
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a>, <a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
 </li>
 
 <li>
@@ -487,7 +515,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
 
 <ul>
 <li>
@@ -643,15 +671,27 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_645d1167505614e8ec10955ba08177ffba8869fd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mo>*</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A, \ast)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/star-algebra'>star-algebra</a> and <math class='maruku-mathml' display='inline' id='mathml_645d1167505614e8ec10955ba08177ffba8869fd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a>, a <em>star-representation</em> of <math class='maruku-mathml' display='inline' id='mathml_645d1167505614e8ec10955ba08177ffba8869fd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mo>*</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A,\ast)</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_645d1167505614e8ec10955ba08177ffba8869fd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/homomorphism'>homomorphism</a> of star algebras from <math class='maruku-mathml' display='inline' id='mathml_645d1167505614e8ec10955ba08177ffba8869fd_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> to <a class='existingWikiWord' href='/nlab/show/linear+map'>linear operators</a> on <math class='maruku-mathml' display='inline' id='mathml_645d1167505614e8ec10955ba08177ffba8869fd_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math>.</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_0513e0d039e8a645e975d5a3cb7ea024a5a34ce0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>𝒜</mi><mo>,</mo><mo>*</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\mathcal{A}, \ast)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/star-algebra'>star-algebra</a> and <math class='maruku-mathml' display='inline' id='mathml_0513e0d039e8a645e975d5a3cb7ea024a5a34ce0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a>, a <em>star-representation</em> of <math class='maruku-mathml' display='inline' id='mathml_0513e0d039e8a645e975d5a3cb7ea024a5a34ce0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>𝒜</mi><mo>,</mo><mo>*</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\mathcal{A},\ast)</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_0513e0d039e8a645e975d5a3cb7ea024a5a34ce0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/homomorphism'>homomorphism</a> of star algebras from <math class='maruku-mathml' display='inline' id='mathml_0513e0d039e8a645e975d5a3cb7ea024a5a34ce0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> to <a class='existingWikiWord' href='/nlab/show/linear+map'>linear operators</a> on (a <a class='existingWikiWord' href='/nlab/show/dense+subspace'>dense subspace</a> of) <math class='maruku-mathml' display='inline' id='mathml_0513e0d039e8a645e975d5a3cb7ea024a5a34ce0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℋ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{H}</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/representation+of+a+C-star-algebra'>representation of a C-star-algebra</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/representation+of+a+C-star-algebra'>representation of a C-star-algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+</li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li id='KhavkineMoretti15'><a class='existingWikiWord' href='/nlab/show/Igor+Khavkine'>Igor Khavkine</a>, <a class='existingWikiWord' href='/nlab/show/Valter+Moretti'>Valter Moretti</a>, def. 7 in <em>Algebraic QFT in Curved Spacetime and quasifree Hadamard states: an introduction</em>, Chapter 5 in <a class='existingWikiWord' href='/nlab/show/Romeo+Brunetti'>Romeo Brunetti</a> et al. (eds.) <em>Advances in Algebraic Quantum Field Theory</em>, , Springer, 2015</li>
 </ul>
 
 <p>
@@ -663,14 +703,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on April  2, 2013 10:07:19 
+  Revised on December  3, 2017 16:29:23 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.106)
+  (178.6.238.237)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/star-representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/star-representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/star-representation/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/star-representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/star-representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
