--- a/pages/5206.html
+++ b/pages/5206.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      commutative operad in nLab
+      commutative monoid operad in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      commutative operad
+      commutative monoid operad
   </h1>
 
 
@@ -500,7 +500,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>commutative operad</em> is the <a class='existingWikiWord' href='/nlab/show/operad'>operad</a> whose <a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebras over an operad</a> are <a class='existingWikiWord' href='/nlab/show/commutative+monoid'>commutative monoids</a> in the ambient <a class='existingWikiWord' href='/nlab/show/enriched+category'>enriching category</a>, hence the <a class='existingWikiWord' href='/nlab/show/commutative+algebra'>commutative algebras</a> if interpreted in <a class='existingWikiWord' href='/nlab/show/vector+space'>vector spaces</a> and the <a class='existingWikiWord' href='/nlab/show/differential+graded-commutative+algebra'>differential graded-commutative algebras</a> if interpreted n <a class='existingWikiWord' href='/nlab/show/chain+complex'>chain complexes</a>.</p>
+<p>The <em>commutative operad</em> is the <a class='existingWikiWord' href='/nlab/show/operad'>operad</a> whose <a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebras over an operad</a> are <a class='existingWikiWord' href='/nlab/show/commutative+monoid'>commutative monoids</a> in the ambient <a class='existingWikiWord' href='/nlab/show/enriched+category'>enriching category</a>, hence the <a class='existingWikiWord' href='/nlab/show/commutative+algebra'>commutative algebras</a> if interpreted in <a class='existingWikiWord' href='/nlab/show/vector+space'>vector spaces</a> and the <a class='existingWikiWord' href='/nlab/show/differential+graded-commutative+algebra'>differential graded-commutative algebras</a> if interpreted in <a class='existingWikiWord' href='/nlab/show/chain+complex'>chain complexes</a>.</p>
 
 <p>Its cofibrant <a class='existingWikiWord' href='/nlab/show/resolution'>resolutions</a> in the <a class='existingWikiWord' href='/nlab/show/model+structure+on+operads'>model structure on operads</a> are <span class='newWikiWord'>E-infinity operads<a href='/nlab/new/E-infinity+operads'>?</a></span> whose <a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebras</a> are <a class='existingWikiWord' href='/nlab/show/E-infinity+algebra'>E-infinity algebras</a>.</p>
 
@@ -530,29 +530,38 @@ margin-left: 0em;
 </p>
 
 <p>
+ 
 </p>
 
 <p>
 </p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on December  5, 2017 10:04:17 
+  Revised on December  5, 2017 11:26:30 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.234.75)
+  (178.24.247.236)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/commutative+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/commutative+operad/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/commutative+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/commutative+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/commutative+monoid+operad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/commutative+monoid+operad/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/commutative+monoid+operad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/commutative+monoid+operad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/commutative+operad" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/commutative+monoid+operad" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/commutative+operad" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/commutative+monoid+operad" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/commutative+operad" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/commutative+monoid+operad" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
