--- a/pages/3866.html
+++ b/pages/3866.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,20 +308,32 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
+    <h2 id='second_chapter'>Second chapter</h2>
+
+<div class='num_prop' id='Proposition2'>
+<h6 id='proposition'>Proposition</h6>
+<div class='maruku-equation' id='eq:equation2'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_98e06619761ff781734069908a856b7d20231975_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi><mo>=</mo><mi>z</mi></mrow><annotation encoding='application/x-tex'>
+  
+  y = z
+
+</annotation></semantics></math></div></div>
+
+<p>See also (eq:equation1) in prop. \ref{Proposition1}.</p>
+
+<p>
  
  <div class='property'> category: <a class='category_link' href='/nlab/list/empty'>empty</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on August 26, 2015 12:14:45 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (64.89.58.198)
+  Revised on December  5, 2017 14:18:24 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/empty+003" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+003/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/empty+003" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+003" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/empty+003" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+003/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/empty+003" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+003" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
