--- a/pages/17631.html
+++ b/pages/17631.html
@@ -308,9 +308,15 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='related_concepts'>Related concepts</h2>
+    <p>Catalan numbers are a specific sequence of nonnegative integers, here denoted <math class='maruku-mathml' display='inline' id='mathml_a35cc779a47a24c3050c74bfed77f4dd37ed6adb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>C</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>C_n</annotation></semantics></math>, with a ubiquitous combinatorial interpretations. In terms of <a class='existingWikiWord' href='/nlab/show/binomial+theorem'>binomial coefficient</a>s,</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a35cc779a47a24c3050c74bfed77f4dd37ed6adb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>C</mi> <mi>n</mi></msub><mo>=</mo><mfrac><mn>1</mn><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></mfrac><mrow><mo>(</mo><mfrac linethickness='0'><mrow><mn>2</mn><mi>n</mi></mrow><mi>n</mi></mfrac><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>C_n = \frac{1}{n+1}\binom{2 n}{n}</annotation></semantics></math></div>
+<p>A Catalan number <math class='maruku-mathml' display='inline' id='mathml_a35cc779a47a24c3050c74bfed77f4dd37ed6adb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>C</mi> <mi>n</mi></msub></mrow><annotation encoding='application/x-tex'>C_n</annotation></semantics></math> describes a number of matching pairs of <math class='maruku-mathml' display='inline' id='mathml_a35cc779a47a24c3050c74bfed77f4dd37ed6adb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> parenthesis properly matched. It is the number of nonisomorphic ordered trees with <math class='maruku-mathml' display='inline' id='mathml_a35cc779a47a24c3050c74bfed77f4dd37ed6adb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math> vertices.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
+<li><a class='existingWikiWord' href='/nlab/show/associahedron'>associahedron</a></li>
+
 <li><a class='existingWikiWord' href='/nlab/show/Cayley-Dickson+construction'>Cayley-Dickson construction</a></li>
 </ul>
 
@@ -318,6 +324,10 @@ margin-left: 0em;
 
 <ul>
 <li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Catalan_number'>Catalan number</a></em></li>
+
+<li>Richard P. Stanley, <em>Catalan addendum</em>, (to problems in Chapter 6 of <em>Enumerative Combinatorics</em>, vol. 2) 96 pp. <a href='http://www-math.mit.edu/~rstan/ec/catadd.pdf'>pdf</a></li>
+
+<li>Richard P. Stanley, <em>Catalan numbers</em>, 215 pp., Cambridge University Press 2015</li>
 </ul>
 
 <p>
@@ -325,14 +335,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on September  5, 2016 06:11:08 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.183)
+  Revised on December  6, 2017 13:19:55 
+  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
+  (161.53.28.4)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Catalan+number" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Catalan+number" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Catalan+number/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Catalan+number" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Catalan+number" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
