--- a/pages/18836.html
+++ b/pages/18836.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Anthony Morse in nLab
+      Morse potential in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Anthony Morse
+      Morse potential
   </h1>
 
 
@@ -308,32 +308,44 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Anthony Morse and John L. Kelly created the Morse-Kelly set theory.</p>
+    <p>Morse potential is one of the standard 1-dimensional potentials which are used mainly in quantum mechanics (especially in atomic and molecular physics). If <math class='maruku-mathml' display='inline' id='mathml_bb78720760e10116b60e82c409cf069046563d90_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi></mrow><annotation encoding='application/x-tex'>r</annotation></semantics></math> is the coordinate (say, the distance between atoms) in <math class='maruku-mathml' display='inline' id='mathml_bb78720760e10116b60e82c409cf069046563d90_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℝ</mi> <mo>+</mo></msub></mrow><annotation encoding='application/x-tex'>\mathbb{R}_+</annotation></semantics></math>, and <math class='maruku-mathml' display='inline' id='mathml_bb78720760e10116b60e82c409cf069046563d90_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>l</mi><mo>,</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>l, D</annotation></semantics></math> constants (<math class='maruku-mathml' display='inline' id='mathml_bb78720760e10116b60e82c409cf069046563d90_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>l</mi></mrow><annotation encoding='application/x-tex'>l</annotation></semantics></math> being the scale of the system) then one of the standard forms of Morse potential is</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_bb78720760e10116b60e82c409cf069046563d90_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi><mo stretchy='false'>(</mo><mi>r</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>D</mi><mo stretchy='false'>(</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>2</mn><mi>x</mi><mo stretchy='false'>/</mo><mi>l</mi></mrow></msup><mo>−</mo><mn>2</mn><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>x</mi><mo stretchy='false'>/</mo><mi>l</mi></mrow></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+V(r) = D (e^{- 2 x/l} - 2 e^{-x/l})
+
+</annotation></semantics></math></div>
+<p>up to addition of physically irrelevant constant summand this is the same as <math class='maruku-mathml' display='inline' id='mathml_bb78720760e10116b60e82c409cf069046563d90_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo stretchy='false'>(</mo><mn>1</mn><mo>−</mo><mi>exp</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>x</mi><mo stretchy='false'>/</mo><mi>l</mi><mo stretchy='false'>)</mo><msup><mo stretchy='false'>)</mo> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>D (1 - exp(-x/l))^2</annotation></semantics></math>.</p>
 
 <ul>
-<li><a href='http://en.wikipedia.org/wiki/Anthony_Morse'>Wikipedia entry</a></li>
+<li>wikipedia <a href='https://en.wikipedia.org/wiki/Morse_potential'>Morse potential</a></li>
+
+<li>P. M. Morse, <em>Diatomic molecules according to the wave mechanics. II. Vibrational levels</em>, Phys. Rev. <strong>34</strong>, 57-64 (1929)</li>
+
+<li>B Molnár, M G Benedict, J Bertrand, <em>Coherent states and the role of the affine group in the quantum mechanics of the Morse potential</em>, J. Phys. <strong>A34</strong>, n.14, 3139-3151 (2001) <a href='https://doi.org/10.1088/0305-4470/34/14/318'>doi</a></li>
+
+<li>Jens Peder Dahl, Michael Springborg, <em>The Morse oscillator in position space, momentum space, and phase space</em>, J. Chem. Physics <strong>88</strong>, 4535 (1988) <a href='http://dx.doi.org/10.1063/1.453761'>doi</a> <div class='property'> category: <a class='category_link' href='/nlab/list/physics'>physics</a></div></li>
 </ul>
 
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on December  7, 2017 06:28:34 
+  Created on December  7, 2017 06:55:41 
   by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
   (161.53.28.4)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Anthony+Morse" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Anthony+Morse/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Anthony+Morse" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Anthony+Morse" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Morse+potential" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Anthony+Morse" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Morse+potential" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Anthony+Morse" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Morse+potential" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Anthony+Morse" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Morse+potential" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
